--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			//fetching the data 
 			let treeData;//creating an empty container for treeData
 			
-			fetch("./WebMap.Geojson")
+			fetch("./treesdata_wgs84.geojson")
 				.then(response => {
 				return response.json();
 			})
