--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			crossorigin="">
 		</script>
 		
-		<link rel="stylesheet" href="styles.css"/>
+		<link rel="stylesheet" href="style.css"/>
 	</head>
 	
 	<body>
@@ -47,8 +47,8 @@
 				})
 			.then(data => treeLayer.addData(data));
 			
-			let treeLayer = L.geoJson(null,
-									(onEachFeature:
+			let treeLayer = L.geoJSON(null,
+									{onEachFeature:
 										function (feature, layer) {
 										layer.bindPopup("placeholder text blah blah blah")
 										},
