--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				attribution: '&copy; <a herf="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 			});
 			
-			Maptiles_A.addto(myMap).setOpacity(0.5);
+			Maptiles_A.addTo(myMap).setOpacity(0.5);
 			
 			//fetching the data 
 			let treeData;//creating an empty container for treeData
