--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									};
 									let treeIcon = L.icon(iconOptions);
 									
-									return L.marker(latlng, {icon: treeIcon)
+									return L.marker(latlng, {icon: treeIcon})
 									}
 									});
 			treeLayer.addTo(myMap);
