--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		</script>
 		
 		<link rel="stylesheet" href="style.css"/>
+		
+		<script src="leaflet-sidebar.js">
+		</script>
+		<link rel="stylesheet" href="leaflet-sidebar.css"/>
+		
+		
 	</head>
 	
 	<body>
@@ -41,7 +47,8 @@
 			let treeLayer = L.geoJSON(null,
 									{onEachFeature:
 										function (feature, layer) {
-										layer.bindPopup("placeholder text blah blah blah")
+										//layer.bindPopup("placeholder text blah blah blah")
+										layer.bindPopup
 										},
 									
 									pointToLayer: function(feature, latlng) {
@@ -57,6 +64,18 @@
 									}
 									});
 			treeLayer.addTo(myMap);
+			//END FORMATTING LAYER
+			
+			//SIDEBAR IMPLEMENTATION
+			let sidebar = L.control.sidebar({
+			autopan: false, 
+			closeButton: true,
+			container: "sidebar",
+			position: "right"
+			}).addTo(myMap);
+			
+			//close on mapclick behaviour
+			myMap.on("click", function() {sidebar.close()});
 			
 			//fetching the data
 			let treeData;
