--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 			position: "right"
 			}).addTo(myMap);
 			
-			let info = '<h1>Tree Catalog- the Carbon Capture Institute of Trinidad & Tobago</h1>
+			let info = `<h1>Tree Catalog- the Carbon Capture Institute of Trinidad & Tobago</h1>
 						<h2>Purpose:</h2>
-						<h2>Contributors:</h2>';
+						<h2>Contributors:</h2>`;
 			let panelConent = {
 				id: 'info',
 				tab: '<img class ="sidebar-tab-icon" src="./logos/logo_color.png">',
