--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			crossorigin="">
 		</script>
 		
-		<link rel="stylesheet" href="style(2).css"/>
+		<link rel="stylesheet" href="style (2).css"/>
 		
 		<script src="leaflet-sidebar.js">
 		</script>
@@ -79,7 +79,7 @@
 						
 			let panelConent = {
 				id: 'info',
-				tab: '<img class ='sidebar-tab-icon' src="./logos/logo_color.png">',
+				tab: '<img class ="sidebar-tab-icon" src="./logos/logo_color.png">',
 				pane: info,
 				title: 'Information',
 				position: 'top'
