--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			position: "right"
 			}).addTo(myMap);
 			
-			let info = "<h1>Tree Catalog- the Carbon Capture Institute of Trinidad & Tobago</h1>"
+			let info = "<h1>Tree Catalog- The Carbon Capture Institute of Trinidad & Tobago</h1>"
 						+"<h2>Purpose:</h2>" + "<h2>Contributors:</h2>";
 						
 			let panelConent = {
