--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									{onEachFeature:
 										function (feature, layer) {
 										//layer.bindPopup("placeholder text blah blah blah")
-										layer.bindPopup('
+										layer.bindPopup(`
 										<div class="tree-type">#${f.NUMBER}: ${f.TYPE}</div>
 										<div class="timestamp">${f.PHOTO_TIMESTAMP}</div>
 										<img class="photo" src="treeicon.png" alt="Photo of Tree">
