--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			//fetching the data
 			let treeData;
 			
-			fetch("./treesdata_CC.geojson")
+			fetch("./treesdata_CRS.geojson")
 				.then(response => {
 				return response.json();
 			})
