--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										<div class="offset">Est.Offset: ${f.CARBONOFF_EST}</div>
 										<div class="beneficiary">Beneficiary: ${f.BENEFICIARY}</div>
 										<div class="planter">Planter: ${f.PLANTER}</div>
-										<div class="risk-level">Risk: ${f.RISKLEVEL},/div>
+										<div class="risk-level">Risk: ${f.RISKLEVEL}</div>
 										`)
 									},
 									
