--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			//fetching the data
 			let treeData;
 			
-			fetch("treesdata_CRS.geojson")
+			fetch(./"1treesdata_wgs84.geojson")
 				.then(response => {
 				return response.json();
 			})
