--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 			
 			let treeLayer = L.geoJSON(null,
 									{onEachFeature:
-										function (f, layer) {
+										function (feature, layer) {
 										//layer.bindPopup("placeholder text blah blah blah")
 										layer.bindPopup(`
-										<div class="tree-type"> ${f.NUMBER}: ${f.TYPE}</div>
-										<div class="timestamp">${f.PHOTO_TIMESTAMP}</div>
+										<div class="tree-type"> ${feature.NUMBER}: ${feature.TYPE}</div>
+										<div class="timestamp">${feature.PHOTO_TIMESTAMP}</div>
 										<img class="photo" src="treeicon.png" alt="Photo of Tree">
-										<div class="offset">Est.Offset: ${f.CARBONOFF_EST}</div>
-										<div class="beneficiary">Beneficiary: ${f.BENEFICIARY}</div>
-										<div class="planter">Planter: ${f.PLANTER}</div>
-										<div class="risk-level">Risk: ${f.RISKLEVEL}</div>
+										<div class="offset">Est.Offset: ${feature.CARBONOFF_EST}</div>
+										<div class="beneficiary">Beneficiary: ${feature.BENEFICIARY}</div>
+										<div class="planter">Planter: ${feature.PLANTER}</div>
+										<div class="risk-level">Risk: ${feature.RISKLEVEL}</div>
 										`)
 									},
 									
@@ -107,7 +107,7 @@
 			//fetching the data
 			let treeData;
 			
-			fetch(./"1treesdata_wgs84.geojson")
+			fetch("1treesdata_wgs84.geojson")
 				.then(response => {
 				return response.json();
 			})
