--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 										function (feature, layer) {
 										//layer.bindPopup("placeholder text blah blah blah")
 										layer.bindPopup(`
-										<div class="tree-type"> ${feature.NUMBER}: ${feature.TREE TYPE}</div>
-										<div class="timestamp">${feature.PHOTO DATE}</div>
+										<div class="tree-type"> ${feature.properties["NUMBER"]}: ${feature.TREE TYPE}</div>
+										<div class="timestamp">${feature.properties["PHOTO DATE"]}</div>
 										<img class="photo" src="treeicon.png" alt="Photo of Tree">
-										<div class="offset">Est.Offset: ${feature.ESTIMATED}</div>
-										<div class="beneficiary">Beneficiary: ${feature.ORGANISATI}</div>
-										<div class="planter">Planter: ${feature.INDIVIDUAL}</div>
-										<div class="risk-level">Risk: ${feature.RISKLEVEL}</div>
+										<div class="offset">Est.Offset: ${feature.properties["ESTIMATED"]}</div>
+										<div class="beneficiary">Beneficiary: ${feature.properties["ORGANISATI"]}</div>
+										<div class="planter">Planter: ${feature.properties["INDIVIDUAL"]}</div>
+										<div class="risk-level">Risk: ${feature.properties["RISKLEVEL"]}</div>
 										`)
 									},
 									
