--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										function (feature, layer) {
 										//layer.bindPopup("placeholder text blah blah blah")
 										layer.bindPopup(`
-										<div class="tree-type"> ${feature.properties["NUMBER"]}: ${feature.TREE TYPE}</div>
+										<div class="tree-type"> ${feature.properties["NUMBER"]}: ${feature.properties["TREE TYPE"]}</div>
 										<div class="timestamp">${feature.properties["PHOTO DATE"]}</div>
 										<img class="photo" src="treeicon.png" alt="Photo of Tree">
 										<div class="offset">Est.Offset: ${feature.properties["ESTIMATED"]}</div>
