--- a/index.html
+++ b/index.html
@@ -82,8 +82,30 @@
 			position: "right"
 			}).addTo(myMap);
 			
-			let info = "<h1>Tree Catalog- The Carbon Capture Institute of Trinidad & Tobago</h1>"
-						+"<h2>Purpose:</h2>" + "<h2>Contributors:</h2>";
+			let info = `<h1>Tree Catalog - The Carbon Zero Institute of Trinidad and Tobago</h1>
+			<h2>Purpose:</h2>
+			<p> Carbon emissions from fossil fuels, the inustrial sector and land use is the largest source of global Greenhouse Gas (GHG) emissions. 
+			We must act now and do our part to combat the exacerbated effects of climate change. 
+			The CZITT 1000 trees challenge initiative partners with schools, clubs and corporations to plant and record trees which are then geotagged.
+			Our goal is to establish a carbon offset registry in which its efforts are driven towards reducing carbon emissions via carbon sequestration as a proven climate change mitigation strategy.</p>
+	
+	
+	
+	
+	
+	
+			<h2>Contributors:</h2>
+			<p>Ryan Seemungal, Technical Assistant</p>
+			<p>Brandon Serrao, Technical Assistant</p>
+			<p>Sweelan Renaud, Program Assistant at Advisors Next Door</p>
+			<p>Aashrita Mohess, Intern at Advisors Next Door </p>
+	
+			<h4> Contact:</4>
+			<p> Contact us at <a href="mailto:advisorsnextdoor@gmail.com"target="_blank">advisorsnextdoor@gmail.com</a> for more information</p>
+	
+			<p>Visit <a href= "https://czitt-ed.org/"target="_blank">Caribbean E-Learning by the Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
+	
+			`;
 						
 			let panelConent = {
 				id: 'info',
