--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 										//layer.bindPopup("placeholder text blah blah blah")
 										layer.bindPopup(`
 										<div class="tree-type"> ${feature.properties["NUMBER"]}: ${feature.properties["TREE TYPE"]}</div>
-										<div class="timestamp">${feature.properties["PHOTO DATE"]}</div>
+										<div class="timestamp">"Date Planted":${feature.properties["PHOTO DATE"]}</div>
 										<img class="photo" src="treeicon.png" alt="Photo of Tree">
 										<div class="offset">Est.Offset: ${feature.properties["ESTIMATED"]}</div>
 										<div class="beneficiary">Beneficiary: ${feature.properties["ORGANISATI"]}</div>
 										<div class="planter">Planter: ${feature.properties["INDIVIDUAL"]}</div>
-										<div class="risk-level">Risk: ${feature.properties["RISKLEVEL"]}</div>
+										
 										`)
 									},
 									
@@ -95,8 +95,8 @@
 	
 	
 			<h2>Contributors:</h2>
-			<p>Ryan Seemungal, Technical Assistant</p>
-			<p>Brandon Serrao, Technical Assistant</p>
+			<p>Ryan Seemungal, Data Visualisation Specialist</p>
+			<p>Brandon Serrao, Cartography Instructor</p>
 			<p>Sweelan Renaud, Program Assistant at Advisors Next Door</p>
 			<p>Aashrita Mohess, Intern at Advisors Next Door </p>
 	
