--- a/index.html
+++ b/index.html
@@ -170,22 +170,29 @@
       //TODO fix closebutton icon
       let info = `<h1>Carbon Offset Register - The Carbon Zero Institute of Trinidad and Tobago</h1>
         <h2>Purpose:</h2>
-        <p>Trinidad and Tobago is one of the largest emitters of greenhouse gases per capita, in the world. To meet the goals of The Paris Agreement, Article 2, CZITT is developing a Carbon Offset Register (CORE). This involves the recording of major carbon offsetting initiatives and tracking of the country’s progress to carbon neutrality. One of these initiatives is through a partnership with the For the Exchange Farmers Association, to demonstrate the viability of agricultural produce intermixed with carbon sequestration in trees. This interactive map shows the trees planted by organizations, their locations as well as their potential to sequester carbon.</p>
+        <p>Carbon Zero or Carbon Neutral is a state in which we minimise our carbon emissions and "offset" the balance by storing or sequestering carbon equal to the amount we produce from our activities. Trinidad and Tobago is one of the world's largest emitters of greenhouse gases per capita To meet the goals of The Paris Agreement, the country must reduce and offset a large amount of carbon emissions. CZITT is developing a Carbon Offset Register ("CORE"). This involves the recording of major carbon offsetting initiatives as part of tracking of the country’s progress to carbon neutrality. This interactive map shows the trees and other carbon "sinks" as well as their potential to sequester carbon. Contact us to map your trees and other carbon sinks.</p>
 
         <!--<p> Carbon emissions from fossil fuels, the inustrial sector and land use is the largest source of global Greenhouse Gas (GHG) emissions.
         We must act now and do our part to combat the exacerbated effects of climate change.
         The CZITT 1000 trees challenge initiative partners with schools, clubs and corporations to plant and record trees which are then geotagged.
         Our goal is to establish a carbon offset registry in which its efforts are driven towards reducing carbon emissions via carbon sequestration as a proven climate change mitigation strategy.</p>-->
+		
+		<h4> Contact:</h4>
+        <p> Contact us at <a href="mailto:admin@czitt.com"target="_blank">admin@czitt.com </a> for more information</p>
+
+        <p>Visit <a href= "czitt.com"target="_blank">Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
+        <p> Date Last Updated: 3rd August 2021</p>
         <h2>Contributors:</h2>
         <p><a href="https://www.linkedin.com/in/ryan-seemungal-gis-design/" target="_blank" style="color: black;" class="contributor-name">Ryan Seemungal</a>, <span class="contributor-title">Data Visualization Specialist</span></p>
         <p><a href="https://www.linkedin.com/in/brandon-serrao/" target="_blank" style="color: black;" class="contributor-name">Brandon Serrao</a>, <span class="contributor-title">Cartography & Web Mapping Instructor</span></p>
         <p><a href="https://www.linkedin.com/in/sweelanrenaud/" target="_blank" style="color: black;" class="contributor-name">Sweelan Renaud</a>, <span class="contributor-title">Program Assistant at Advisors Next Door</span></p>
         <p><a href="https://www.linkedin.com/in/aashritamohess/" target="_blank" style="color: black;" class="contributor-name">Aashrita Mohess</a>, <span class="contributor-title">Intern at Advisors Next Door</span></p>
-        <h4> Contact:</h4>
+       
+	   <!--<h4> Contact:</h4>
         <p> Contact us at <a href="mailto:advisorsnextdoor@gmail.com"target="_blank">advisorsnextdoor@gmail.com</a> for more information</p>
 
         <p>Visit <a href= "https://czitt-ed.org/"target="_blank">Caribbean E-Learning by the Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
-        <p> Date Last Updated: 23rd July 2021</p>
+        <p> Date Last Updated: 23rd July 2021</p>-->
         <p>This map was created as part of a Capstone Stone Project done with Advisors Next Door.</p>
 
         `; //preferred position, but sidebar size adjustment makes the svg scale undesirably<div id="chartdiv"></div>
@@ -202,7 +209,7 @@
       sidebar.addPanel({
         id: "ghlink",
         tab: '<img class ="sidebar-tab-icon" src="./logos/github_logo.png">', //TODO get better icon
-        button: "https://github.com/brandonserrao/CND_CZITT_TreesMap",
+        button: "https://github.com/CZITTMap/OnlineMap",
         position: "bottom",
       });
 
