--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
       //TODO fix closebutton icon
       let info = `<h1>Carbon Offset Register - The Carbon Zero Institute of Trinidad and Tobago</h1>
         <h2>Purpose:</h2>
-        <p>Carbon Zero or Carbon Neutral is a state in which we minimise our carbon emissions and "offset" the balance by storing or sequestering carbon equal to the amount we produce from our activities. Trinidad and Tobago is one of the world's largest emitters of greenhouse gases per capita To meet the goals of The Paris Agreement, the country must reduce and offset a large amount of carbon emissions. CZITT is developing a Carbon Offset Register ("CORE"). This involves the recording of major carbon offsetting initiatives as part of tracking of the country’s progress to carbon neutrality. This interactive map shows the trees and other carbon "sinks" as well as their potential to sequester carbon. Contact us to map your trees and other carbon sinks.</p>
+        <p>Carbon Zero or Carbon Neutral is a state in which we minimise our carbon emissions and "offset" the balance by storing or sequestering carbon equal to the amount we produce from our activities. Trinidad and Tobago is one of the world's largest emitters of greenhouse gases per capita. To meet the goals of The Paris Agreement, the country must reduce and offset a large amount of carbon emissions. 
+		CZITT is developing a Carbon Offset Register ("CORE"). This involves the recording of major carbon offsetting initiatives as part of tracking of the country’s progress to carbon neutrality. 
+		This interactive map shows the trees and other carbon "sinks" as well as their potential to sequester carbon. 
+		Contact us to map your trees and other carbon sinks.</p>
 
         <!--<p> Carbon emissions from fossil fuels, the inustrial sector and land use is the largest source of global Greenhouse Gas (GHG) emissions.
         We must act now and do our part to combat the exacerbated effects of climate change.
@@ -180,7 +183,7 @@
 		<h4> Contact:</h4>
         <p> Contact us at <a href="mailto:admin@czitt.com"target="_blank">admin@czitt.com </a> for more information</p>
 
-        <p>Visit <a href= "czitt.com"target="_blank">Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
+        <p>Visit <a href="czitt.com"target="_blank">Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
         <p> Date Last Updated: 3rd August 2021</p>
         <h2>Contributors:</h2>
         <p><a href="https://www.linkedin.com/in/ryan-seemungal-gis-design/" target="_blank" style="color: black;" class="contributor-name">Ryan Seemungal</a>, <span class="contributor-title">Data Visualization Specialist</span></p>
