--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       let info = `<h1>Carbon Offset Register - The Carbon Zero Institute of Trinidad and Tobago</h1>
         <h2>Purpose:</h2>
         <p>Carbon Zero or Carbon Neutral is a state in which we minimise our carbon emissions and "offset" the balance by storing or sequestering carbon equal to the amount we produce from our activities. Trinidad and Tobago is one of the world's largest emitters of greenhouse gases per capita. To meet the goals of The Paris Agreement, the country must reduce and offset a large amount of carbon emissions. 
-		CZITT is developing a Carbon Offset Register ("CORE"). This involves the recording of major carbon offsetting initiatives as part of tracking of the country’s progress to carbon neutrality. 
-		This interactive map shows the trees and other carbon "sinks" as well as their potential to sequester carbon. </p> 
+		CZITT is developing a Carbon Offset Register ("CORE"). This involves the recording of major carbon offsetting initiatives as part of tracking of the country’s progress to carbon neutrality.</p>
+		<p>This interactive map shows the trees and other carbon "sinks" as well as their potential to sequester carbon. </p> 
 		<p>Contact us to map your trees and other carbon sinks.</p>
 
         <!--<p> Carbon emissions from fossil fuels, the inustrial sector and land use is the largest source of global Greenhouse Gas (GHG) emissions.
