--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		<h4> Contact:</h4>
         <p> Contact us at <a href="mailto:admin@czitt.com"target="_blank">admin@czitt.com </a> for more information</p>
 
-        <p>Visit <a href="czitt.com"target="_blank">Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
+        <p>Visit <a href="https://czitt.com"target="_blank">Carbon Zero Institute of Trinidad and Tobago</a> to learn more about this project and how you can get involved</p>
         
         <h2>Contributors:</h2>
         <p><a href="https://www.linkedin.com/in/ryan-seemungal-gis-design/" target="_blank" style="color: black;" class="contributor-name">Ryan Seemungal</a>, <span class="contributor-title">Data Visualization Specialist</span></p>
