--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             .layers(null, beneficiaries)
             .setPosition("topright")
             .addTo(myMap); //adds toggle control to map
-			pane: '<h2>Projected Sequestration Rates in 20 Years</h2>
+			pane: '<h2>Projected Sequestration Rates in 20 Years</h2>',
 			<img src="20Years.png">
 
           //adding searchbar to sidebar
