--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- BRANDON SERRAO, CONTRIBUTING TO INTERNSHIP FOR CONSULTANTS NEXT DOOR & CARBON ZERO INSTITUTE OF TRINIDAD AND TOBAGO -->
+
 <html>
   <head>
     <title>CZITT Carbon Register Map (DEMO)</title>
@@ -276,7 +276,7 @@
             .layers(null, beneficiaries)
             .setPosition("topright")
             .addTo(myMap); //adds toggle control to map
-			pane: '<h2>Projected Sequestration Rates in 20 Years</h2>',
+			'<h2>Projected Sequestration Rates in 20 Years</h2>',
 			<img src="20Years.png">
 
           //adding searchbar to sidebar
