--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             title: "Pie Chart",
             pane: `<h2>Projected Sequestration Rates in 20 Years</h2>
 				'<img src="20Years.png">',
-			.setPosition("topleft") 
+			.setPosition("topright") 
 			});
 
           //adding searchbar to sidebar
