--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
             title: "Pie Chart",
             pane: `<h2>Projected Sequestration Rates in 20 Years</h2>
 				'<img src="20Years.png">',
+				width="400"
+				height="500"
 			position: "top",` 
 			});
 
