--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
             tab: '<img class="sidebar-tab-icon" src="PieChart.png">', //placeholder
             title: "Pie Chart",
             pane: `<h2>Projected Sequestration Rates in 20 Years</h2>
-	    	'<img src="20Years.png">',
+	    		'<img src="20Years.png">',
+			position: "top",` 
 			});			
           //adding searchbar to sidebar
           sidebar.addPanel({
